# tougou_bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  go.mod  go.sum  kidou.sh  mix.exs
cmd/tougou_bot/: main.go
config/: config.exs
internal/pkg/apicaller/: apicaller.go  apicaller_test.go
internal/pkg/commandsplitter/: commandSplitter.go  commandSplitter_test.go
internal/pkg/danbooru/: danbooru.go  danbooru_test.go
internal/pkg/jisho/: jisho.go  jisho_test.go
internal/pkg/modules/: jisho.go  jisho_test.go
internal/pkg/util/: embedHelper.go
lib/: anime.ex  debug.ex  jisho.ex  tag.ex  tougou_bot.ex  vndb.ex  wiki.ex
lib/modules/: anime.ex  danbooru.ex  debug.ex  jisho.ex  tag.ex  vndb.ex  wiki.ex
lib/util/: error_handler.ex  parsers.ex
src/: lib.rs  main.rs
src/commands/: jisho.rs  mod.rs  pic.rs  ping.rs  status.rs  tag.rs  vndb.rs
src/data_access/: mod.rs
src/data_access/jisho_repository/: jisho_org_repository.rs  mod.rs
src/data_access/pic_repository/: danbooru_pic_repository.rs  mod.rs
src/data_access/tag_repository/: mod.rs  sqlite_tag_repository.rs
src/data_access/vndb_repository/: mod.rs  vndb_org_repository.rs
src/discord_client/: mod.rs  serenity_discord_client.rs
src/models/: jisho_definition.rs  mod.rs  pic.rs  tag.rs  vndb_result.rs
test/: tougou_bot_test.exs
