[package]
name = "tougou_bot"
version = "1.0.0-dev"
authors = ["Alexander Hammatt <alexander.hammatt@protonmail.com>"]
edition = "2018"

[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity/", branch = "v0.6.x" }
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"