[package]
name = "tougou_bot"
version = "1.0.0-dev"
authors = ["Alexander Hammatt <alexander.hammatt@protonmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6"
log = "0.4"
reqwest = "0.9"
rusqlite = "0.18"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serenity = { git = "https://github.com/serenity-rs/serenity/", branch = "v0.6.x" }